# sherpa-onnx-minimal

./: .gitignore  CMakeLists.txt  README.md
sherpa-onnx/csrc/: CMakeLists.txt  ros2-sherpa-onnx-vad-microphone-offline-asr.cc  sherpa-onnx-microphone.cc  sherpa-onnx-vad-microphone-offline-asr.cc  silero-vad-model.cc  silero-vad-model.h  vad-model-config.cc  vad-model-config.h  vad-model.h  voice-activity-detector.cc  voice-activity-detector.h
